--- a/volume/openresty/nginx/conf/nginx.conf
+++ b/volume/openresty/nginx/conf/nginx.conf
@@ -1,13 +1,6 @@
-
-#user  nobody;
-worker_processes  1;
-
-#error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
-
-#pid        logs/nginx.pid;
-
+user www-data;
+worker_processes  auto;
+pid /run/openresty.pid;
 
 events {
     worker_connections  1024;
@@ -24,6 +17,9 @@ http {
 
     #access_log  logs/access.log  main;
 
+    access_log /land/outbox/access.log;
+    error_log /land/outbox/error.log;
+
     sendfile        on;
     #tcp_nopush     on;
 
@@ -31,6 +27,11 @@ http {
     keepalive_timeout  65;
 
     #gzip  on;
+
+    upstream php {
+        server unix:/run/php/php7.1-fpm.sock;
+        #server 127.0.0.1:9000;
+    } 
 
     server {
         listen       80;
@@ -41,8 +42,8 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-            root   html;
-            index  index.html index.htm;
+            root   /www;
+            index  index.html index.htm index.php;
         }
 
         #error_page  404              /404.html;
@@ -62,13 +63,16 @@ http {
 
         # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
         #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
+        location ~ \.php$ {
+           root           /www;
+           #------------
+           try_files $uri =404;
+           fastcgi_split_path_info ^(.+\.php)(/.+)$$;
+           fastcgi_pass   php;
+           fastcgi_index  index.php;
+           fastcgi_param  SCRIPT_FILENAME  /www$fastcgi_script_name;
+           include        fastcgi_params;
+        }
 
         # deny access to .htaccess files, if Apache's document root
         # concurs with nginx's one
