--- a/volume/php/fpm/pool.d/www.conf
+++ b/volume/php/fpm/pool.d/www.conf
@@ -47,7 +47,7 @@ listen = /run/php/php7.1-fpm.sock
 ;                 mode is set to 0660
 listen.owner = www-data
 listen.group = www-data
-;listen.mode = 0660
+listen.mode = 0660
 ; When POSIX Access Control Lists are supported you can set them using
 ; these options, value is a comma separated list of user/group names.
 ; When set, listen.owner and listen.group are ignored
@@ -60,7 +60,7 @@ listen.group = www-data
 ; must be separated by a comma. If this value is left blank, connections will be
 ; accepted from any ip address.
 ; Default Value: any
-;listen.allowed_clients = 127.0.0.1
+listen.allowed_clients = 127.0.0.1
 
 ; Specify the nice(2) priority to apply to the pool processes (only if set)
 ; The value can vary from -19 (highest priority) to 20 (lower priority)
@@ -257,7 +257,7 @@ pm.max_spare_servers = 3
 
 ; The access log file
 ; Default: not set
-;access.log = log/$pool.access.log
+access.log = /land/outboxlog/$pool.access_php-fpm.log
 
 ; The access log format.
 ; The following syntax is allowed
